[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ql_tracker"
version = "0.1.0"
description = "A modern Python decorator for tracking function calls with rich logging"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "QL Tracker", email = "dev@qltracker.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "requests"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/qltracker/trackdecorator"
Repository = "https://github.com/qltracker/trackdecorator.git"
Issues = "https://github.com/qltracker/trackdecorator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ql_tracker"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 